...
  }

  @override
  Future<void> onError({required String url, required Object error, StackTrace? stackTrace, Map<String, dynamic>? metadata}) async {
    if (!enabled) return;

    await VooLogger.error('Network error: $url', error: error, stackTrace: stackTrace, category: 'Network', tag: 'Error', metadata: metadata);
  }
}

